<resources>
    <string name="app_name">Kisan E-Market</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_registration">RegistrationActivity</string>
    <string name="title_activity_forgot_pwd">ForgotPwdActivity</string>
    <string name="title_activity_change_pwd">ChangePwdActivity</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="change_password">Change Password</string>
    <string name="email_mobile_no">Email/Mobile no.</string>
    <string name="password">Password</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="home">Home</string>
    <string name="offer_zone">Offer Zone</string>
    <string name="notification">Notification</string>
    <string name="my_account">My Account</string>
    <string name="my_cart">My Cart</string>
    <string name="my_orders">My Orders</string>
    <string name="my_wishlists">My WishLists</string>
    <string name="title_activity_reset">ResetActivity</string>
    <string name="title_activity_add_to_cart">AddToCartActivity</string>
    <string name="buy_now">BUY NOW</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="title_activity_view_order">ViewOrderActivity</string>
    <string name="title_activity_order_detail_view">OrderDetailView</string>
    <string name="title_activity_farmer_home">FarmerHomeActivity</string>


    <string-array name="roleType">
        <item>User</item>
        <item>Farmer(Seller)</item>
    </string-array>
    <string name="title_activity_my_products_of_farmer">MyProductsOfFarmerActivity</string>
    <string name="title_activity_add_stock">AddStockActivity</string>
    <string name="title_activity_user_dashboard1">UserDashboard1</string>
    <string name="title_activity_delivery_boy_dashboard">DeliveryBoyDashboard</string>
    <string name="title_activity_todays_delivery">TodaysDeliveryActivity</string>
    <string name="title_activity_approve_delivery_by_agent">ApproveDeliveryByAgent</string>
    <string name="title_activity_user_dash_board22">UserDashBoard22</string>
    <string name="title_activity_agent_order_history">AgentOrderHistory</string>
    <string name="title_activity_agent_order_history_detail">AgentOrderHistoryDetail</string>
    <string name="title_activity_request_product_approval">RequestProductApprovalActivity</string>


    <string-array name="filterbyOrderType">
        <item>All</item>
        <item>Order Placed</item>
        <item>Order Canceled</item>
        <item>Order Approved</item>
        <item>Order Delivered</item>
        <item>Order Completed</item>


    </string-array>
    <string name="title_activity_collect_order_by_delivery_agent">CollectOrderByDeliveryAgent
    </string>
    <string name="my_referer">Add Referer</string>

</resources>
